--- a/configs/config_example2.yaml
+++ b/configs/config_example2.yaml
@@ -8,9 +8,9 @@ grad_args:
 output_args:
   cfg_sample: 1
   eta: 0.0
-  out_dir: 'results/female2male'
+  out_dir: 'results/jobslei'
   output_psample: True
-  output_image_num: 17
+  output_image_num: 9
   output_start_images: False
   output_opt_points: True
   output_reconstruct_end: True
@@ -34,10 +34,10 @@ tv_args:
   tv_ckpt_folder: 'tv_ckpt_sd2-1'
 noise_level: 0.7
 use_lerp_cond: True
-alpha: 0.002
+alpha: 0.02
 sphere_constraint: True
 grad_analysis_out: True 
-promptA: 'a beautiful woman'
-promptB: 'a handsome man'
-pathA: 'assets/fm25_0.png'
-pathB: 'assets/m25_1.png'
+promptA: 'A portrait of a man'
+promptB: 'A portrait of a man'
+pathA: 'assets/jobs_lei_0.png'
+pathB: 'assets/jobs_lei_1.png'
